<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">ProfilePoolingUe</string>

    <!-- Buttons strings -->
    <string name="add_geofences">位置測位起動</string>
    <string name="remove_geofences">位置測位停止</string>

    <string name="geofences_added">位置測位起動しました</string>
    <string name="geofences_removed">位置測位停止しました</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="input_latitude">経度</string>
    <string name="input_longitude">緯度</string>
    <string name="input_radius">半径</string>
    <string name="btn_save_name">位置情報を保存</string>



</resources>
